Fix preventing glightbox to jump on top
https://github.com/biati-digital/glightbox/issues/22 - Issue

--- a/glightbox/glightbox.css
+++ b/glightbox/glightbox.css
@@ -405,6 +405,7 @@
 
 .glightbox-open {
   overflow: hidden;
+  height: auto;
 }
 
 .gloader {
